# OpcUaTestServer

./: CMakeLists.txt  main.c
nodeset/: OpcUaTestServer.xml
